# Trakt-to-MyAnimeList-MAL-Migrator

./: .env.example  README.md  pyproject.toml  test_phase1.py
src/: anilist_client.py  config.py  gui.py  jikan_client.py  main.py  mal_id_resolver.py  mal_xml_generator.py  models.py  offline_db.py  rate_limiter.py  report_generator.py  tmdb_client.py  trakt_parser.py
