[project]
name = "trakt-to-mal"
version = "1.0.0"
description = "Extract anime from Trakt watch history and generate MAL-compatible import files"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
]

[project.scripts]
trakt-to-mal = "src.main:main"
